--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
