--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "actioncable": "^5.2.8-1",
     "axios": "^1.4.0",
+    "dotenv": "^16.2.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
     "react": "^18.2.0",
